--- a/public/style.css
+++ b/public/style.css
@@ -14,49 +14,7 @@ body {
   width: 25%;
 }
 
-
-/* start of shopping-list css 
-button, input[type="text"] {
-  padding: 5px;
-}
-
-button:hover {
-  cursor: pointer;
-}
-
-#shopping-list-item {
-  width: 250px;
-}
-
-.container {
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-.shopping-list {
-  list-style: none;
-  padding-left: 0;
-}
-
-.shopping-list > li {
-  margin-bottom: 20px;
-  border: 1px solid grey;
-  padding: 20px;
-}
-
-.shopping-item {
-  display: block;
-  color: grey;
-  font-style: italic;
-  font-size: 20px;
-  margin-bottom: 15px;
-}
-
-.shopping-item__checked {
-  text-decoration: line-through;
-} */
-
-
+/* shopping list css */
 button, input[type="text"] {
   padding: 5px;
 }
@@ -83,7 +41,7 @@ button:hover {
   padding-left: 0;
 }
 
-.shopping-list > li {
+.entries-results > li {
   margin-bottom: 20px;
   border: 1px solid grey;
   padding: 20px;
@@ -95,8 +53,4 @@ button:hover {
   font-style: italic;
   font-size: 20px;
   margin-bottom: 15px;
-}
-
-.shopping-item__checked {
-  text-decoration: line-through;
 }
