--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,4 @@
+/* global */
 * {
   box-sizing: border-box;
 }
@@ -10,23 +11,12 @@ body {
 	background-image: url('./img/1923416_507656929395_332_n_507656929395.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
-	height: 100vh;
-	/* padding-top:50px; */
 }
 
 .hidden {
   display: none;
 }
 
-.icon-large {
-  width: 25%;
-}
-
-.icon-small {
-  width: 100px;
-}
-
-/* shopping list css */
 button, input {
   padding: 5px;
 }
@@ -35,6 +25,145 @@ button:hover {
   cursor: pointer;
 }
 
+fieldset {
+  padding: 0;
+  border: 0;
+  margin: 0;
+}
+
+/* logos & icons */
+.icon-large {
+  width: auto;
+  height: 400px;
+  display: block;
+  margin: 50px auto 0;
+  text-align: center;
+}
+
+/* .icon-large.icon-animation1 {
+  animation-timing-function: ease-in;
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -ms-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+  transform: translate3D(900px, 0, 0);
+  margin-top: 0;
+  margin-left: 15% !important;
+  height: 160px;
+}
+
+.icon-large.icon-animation2 {
+  animation-timing-function: ease-in;
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -ms-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+  transform: translate3D(900px, 0, 0);
+ 
+  margin-left: 0; 
+  margin-left: 15% !important;
+}  */
+
+.icon-small {
+  width: auto;
+  height: 160px;
+  /* display: block; */
+  margin: 0;
+}
+
+/* login and signup forms */
+.login-form {
+  width: 400px;
+  padding: 0 40px 10px;
+  border-radius: 0 0 5px 5px;
+  background: #FAF5F1;
+  margin: 0 auto;
+}
+
+.login-form legend {
+  width: 100%;
+  line-height: 38px;
+  font-size: 30px;
+  font-weight: 300;
+  color: #565656;
+  text-align: center;
+  letter-spacing: 0;
+  margin: 0 auto;
+}
+
+.signup-form {
+  width: 400px;
+  padding: 0 40px 10px;
+  border-radius: 0 0 5px 5px;
+  background: #FAF5F1;
+  margin: 0 auto;
+} 
+
+.signup-form legend {
+  width: 100%;
+  line-height: 38px;
+  font-size: 30px;
+  font-weight: 300;
+  color: #565656;
+  text-align: center;
+  letter-spacing: 0;
+  margin: 0 auto 0;
+}
+
+input[type="text"], input[type="password"], button[type="submit"] {
+  display: block;
+  width: 100%;
+  height: auto;
+  font-size: 16px;
+  text-align: left;
+  padding: 15px;
+  border: 2px solid #e7e7e7;
+  border-radius: 3px;
+  background: #fcfcfc;
+  margin: 10px auto 20px;
+  transition: opacity 0.4s;
+}
+
+button[type="submit"] {
+  height: auto;
+  font-size: 22px;
+  font-weight: 500;
+  text-align: center;
+  color: white;
+  background: green;
+  border: 0;
+  cursor: pointer;
+  margin-bottom: 0;
+}
+
+button[type="submit"]:hover,
+button[type="submit"]:focus {
+  background-color: #0CB863;
+  -webkit-transition: background 0.1s;
+  -moz-transition: background 0.1s;
+  -o-transition: background 0.1s;
+  transition: background 0.1s;
+}
+
+.login-form p {
+  font-size: 16px;
+  text-align: center;
+  margin: 10px 0 0;
+  color: #696969;
+}
+
+#signup-link:hover, #login-link:hover {
+  color: rgb(158, 88, 88);
+}
+
+/* dashboard */
+.logout-button {
+  float: right;
+}
+
+/* dashboard entries */
 .entries-results {
   list-style: none;
   padding-left: 0;
@@ -57,6 +186,7 @@ button:hover {
   margin-bottom: 15px;
 }
 
+/* add and edit entry modals */
 .add-entry-modal {
   border: 3px solid black;
   border-radius: 5px;
@@ -71,11 +201,7 @@ button:hover {
   margin-left: -37.5%;
 }
 
-/* .entry-input {
-  margin-bottom: 10px;
-}  */
-
-#notes {
+#notes-field {
   width: 90%;
   display: block;
 }
@@ -84,10 +210,8 @@ button:hover {
   float: right;
   padding: 10px;
   border-radius: 2px;
-  /* background-color: fuchsia; */
 }
 
 .opaque {
   opacity: .5;
 }
-
