--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,22 @@
-/* global */
 * {
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-}
+html, body {
+  margin: 0;
+  padding: 0;
+} 
 
 body {
-	background-image: url('./img/1923416_507656929395_332_n_507656929395.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
+  height: 100vh;
+  background-image: url('./img/yappr-background-image.JPG');
+  min-height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+main {
+  padding: 50px;
 }
 
 .hidden {
@@ -33,42 +39,15 @@ fieldset {
 
 /* logos & icons */
 .icon-large {
-  width: auto;
-  height: 400px;
+  width: 400px;
   display: block;
-  margin: 50px auto 0;
-  text-align: center;
+  margin: 0 auto 0;
+  border-radius: 8px 8px 0 0;
 }
-
-/* .icon-large.icon-animation1 {
-  animation-timing-function: ease-in;
-  -webkit-transition: .5s;
-  -moz-transition: .5s;
-  -ms-transition: .5s;
-  -o-transition: .5s;
-  transition: .5s;
-  transform: translate3D(900px, 0, 0);
-  margin-top: 0;
-  margin-left: 15% !important;
-  height: 160px;
-}
-
-.icon-large.icon-animation2 {
-  animation-timing-function: ease-in;
-  -webkit-transition: .5s;
-  -moz-transition: .5s;
-  -ms-transition: .5s;
-  -o-transition: .5s;
-  transition: .5s;
-  transform: translate3D(900px, 0, 0);
- 
-  margin-left: 0; 
-  margin-left: 15% !important;
-}  */
 
 .icon-small {
-  width: auto;
-  height: 160px;
+
+  height: 100px;
   /* display: block; */
   margin: 0;
 }
@@ -77,8 +56,8 @@ fieldset {
 .login-form {
   width: 400px;
   padding: 0 40px 10px;
-  border-radius: 0 0 5px 5px;
-  background: #FAF5F1;
+  border-radius: 0 0 8px 8px;
+  background-color: #F2EDED;
   margin: 0 auto;
 }
 
@@ -96,7 +75,7 @@ fieldset {
 .signup-form {
   width: 400px;
   padding: 0 40px 10px;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0 0 8px 8px;
   background: #FAF5F1;
   margin: 0 auto;
 } 
@@ -128,11 +107,11 @@ input[type="text"], input[type="password"], button[type="submit"] {
 
 button[type="submit"] {
   height: auto;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 500;
   text-align: center;
   color: white;
-  background: green;
+  background: #844E4D;
   border: 0;
   cursor: pointer;
   margin-bottom: 0;
@@ -140,7 +119,7 @@ button[type="submit"] {
 
 button[type="submit"]:hover,
 button[type="submit"]:focus {
-  background-color: #0CB863;
+  background-color: #946860;
   -webkit-transition: background 0.1s;
   -moz-transition: background 0.1s;
   -o-transition: background 0.1s;
@@ -148,7 +127,7 @@ button[type="submit"]:focus {
 }
 
 .login-form p {
-  font-size: 16px;
+  font-size: 17px;
   text-align: center;
   margin: 10px 0 0;
   color: #696969;
@@ -158,6 +137,23 @@ button[type="submit"]:focus {
   color: rgb(158, 88, 88);
 }
 
+.invalid-login-modal {
+  padding: 10px;
+  height: auto;
+  width: 250px;
+  text-align: center;
+  font-weight: bold;
+  size: 20px;
+  background-color: lightgrey;
+  border: 2px solid black;
+  border-radius: 8px;
+  margin: 0 auto;
+  position: fixed;
+  left: 50%;
+  top: 62%;
+  transform: translate(-50%, -50%);
+}
+
 /* dashboard */
 .logout-button {
   float: right;
@@ -165,17 +161,20 @@ button[type="submit"]:focus {
 
 /* dashboard entries */
 .entries-results {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
   list-style: none;
   padding-left: 0;
 }
 
 .entries-results > li {
-  margin-bottom: 20px;
+  margin-bottom: 16px;
   border: 1px solid grey;
   border-radius: 10px;
   background-color: #D4D0D2;
   box-shadow: 5px 5px 2px lightgrey;
-  padding: 20px;
+  padding: 0 20px;
 }
 
 .entry-item {
