--- a/public/style.css
+++ b/public/style.css
@@ -262,8 +262,9 @@ button[type="submit"]:focus {
 }
 
 #notes-field {
-  width: 90%;
+  width: 100%;
   display: block;
+  font-size: 16px;
 }
 
 .entry-controls {
